# NeuroGraphIQ_KG

./: .env.example  .gitignore  CLAUDE.md  CUsersAdministratorAppDataLocalTemprun_status.json  MEMORY.md  PUSH_GUIDE.md  README.md  create_desktop_shortcut.ps1  create_desktop_shortcut_v3.ps1  diagnose_workbench.bat  docker-compose.neo4j.yml  pyproject.toml  requirements.txt  start_desktop.bat  start_desktop_silent.vbs  start_workbench.bat  start_workbench_silent.vbs  tmp_files.json
.claude/: settings.local.json
backend/: .env.example  _batch_verify_macro.py  _deepseek_data_quality.py  _deepseek_fill_macro.py  _fill_macro_step_regions.py  _fix_remaining_regions.py  _fix_step_names.py  _phase2_funcs.py  _restart_worker.py  _run_all_molecular.py  _run_macro_projection_completion.py  _shorten_names.py  requirements.txt  run_server.py
docs/: CHANGELOG.md  CIRCUIT_PROJECTION_BIDIRECTIONAL_EXTRACTION_DESIGN.md  DATA_CENTER_FORMAL_FIELD_ALIGNMENT.md  DATA_CENTER_UI_DESIGN.md  FINAL_KG_EXPORT_FORMAT.md  FINAL_KG_TRIPLE_GRAPH_DESIGN.md  FORMAL_MACRO_CLINICAL_SCHEMA_ALIGNMENT.md  GITHUB_PUBLISH.md  GPT_SESSION_SYNC.md  LLM_COMPOSITE_WORKFLOW_DESIGN.md  LLM_EXTRACTION_FRONTEND_REFACTOR_SPEC.md  LLM_PROMPT_TEMPLATES_MACRO_CLINICAL.md  LLM_SAME_GRANULARITY_COMPLETION_DESIGN.md  MACRO_96_REGION_POOL.md  MIRROR_KG_AND_FINAL_PROMOTION_DESIGN.md  MIRROR_KG_DEDUP_MERGE_PRINCIPLE.md  NEUROGRAPHIQ_KG_V3_TARGET_ARCHITECTURE.md  NEUROGRAPHIQ_VIBE_CODING_GUIDE.md  REGION_EXTRACTION_PIPELINE_AUDIT.md  TRIPLE_MODEL_AND_ONTOLOGY_DESIGN.md  UNIVERSAL_FIELD_COMPLETION_DESIGN.md  更新说明_本体规则与规则中心.md
(+945 files in other folders)
