[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurokg-workbench-skeleton"
version = "0.1.0"
description = "Knowledge graph workbench stage-1 skeleton"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0",
  "PyYAML>=6.0",
  "psycopg[binary]>=3.2",
  "pypdf>=4.3",
  "openpyxl>=3.1",
  "neo4j>=5.23",
]
